--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  staticAnalysis:
-    name: Static Analysis
+  runCodeBuildCI:
+    name: Run CodeBuild CI
     environment: ci
     runs-on: ubuntu-latest
     steps:
@@ -21,96 +21,12 @@ jobs:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 3600
-      - name: Run Static Analysis
-        uses: aws-actions/aws-codebuild-run-build@v1
-        timeout-minutes: 60
-        with:
-          project-name: AWS-ESDK-Java-CI
-          buildspec-override: codebuild/ci/static-analysis.yml
-          compute-type-override: BUILD_GENERAL1_MEDIUM
-          image-override: aws/codebuild/amazonlinux2-x86_64-standard:3.0
-  vectorTests:
-    name: Vector Tests
-    environment: ci
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        platform:
-          - distribution: openjdk
-            image: "aws/codebuild/standard:3.0"
-          - distribution: corretto
-            image: "aws/codebuild/amazonlinux2-x86_64-standard:3.0" # Corretto only runs on AL2
-        version: [ 8, 11 ]
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
-          aws-region: us-west-2
-          role-duration-seconds: 3600
-      - name: Vector Tests ${{ matrix.platform.distribution }}${{ matrix.version }}
-        uses: aws-actions/aws-codebuild-run-build@v1
-        timeout-minutes: 60
-        with:
-          project-name: AWS-ESDK-Java-CI
-          buildspec-override: codebuild/ci/vectors-ci.yml
-          compute-type-override: BUILD_GENERAL1_LARGE
-          image-override: ${{ matrix.platform.image }}
-          env-vars-for-codebuild: JAVA_ENV_VERSION
-        env:
-          JAVA_ENV_VERSION: ${{ matrix.platform.distribution }}${{ matrix.version }}
-  releaseCI:
-    name: Release CI
-    environment: ci
-    runs-on: ubuntu-latest
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
-          aws-region: us-west-2
-          role-duration-seconds: 3600
-      - name: Release CI
-        uses: aws-actions/aws-codebuild-run-build@v1
-        timeout-minutes: 60
-        with:
-          project-name: AWS-ESDK-Java-CI
-          buildspec-override: codebuild/ci/release-ci.yml
-          compute-type-override: BUILD_GENERAL1_LARGE
-          image-override: aws/codebuild/standard:3.0
-  validateCI:
-    name: Validate CI
-    environment: ci
-    runs-on: ubuntu-latest
-    needs: releaseCI
-    strategy:
-      fail-fast: true
-      matrix:
-        platform:
-          - distribution: openjdk
-            image: "aws/codebuild/standard:3.0"
-          - distribution: corretto
-            image: "aws/codebuild/amazonlinux2-x86_64-standard:3.0" # Corretto only runs on AL2
-        version: [ 8, 11 ]
-    steps:
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
-          aws-region: us-west-2
-          role-duration-seconds: 3600
-      - name: Validate CI ${{ matrix.platform.distribution }}${{ matrix.version }}
-        uses: aws-actions/aws-codebuild-run-build@v1
-        timeout-minutes: 60
-        with:
-          project-name: AWS-ESDK-Java-CI
-          buildspec-override: codebuild/ci/validate-ci.yml
-          compute-type-override: BUILD_GENERAL1_MEDIUM
-          image-override: ${{ matrix.platform.image }}
-          env-vars-for-codebuild: |
-            JAVA_ENV_VERSION,
-            JAVA_NUMERIC_VERSION
-        env:
-          JAVA_ENV_VERSION: ${{ matrix.platform.distribution }}${{ matrix.version }}
-          JAVA_NUMERIC_VERSION: ${{ matrix.version }}
+      - name: Start CodeBuild Batch Build
+        run: |
+          echo 'BATCH_ID<<EOF' >> $GITHUB_ENV
+          ./.github/scripts/start_codebuild_batch.sh pr/${{ github.event.number }} >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+        shell: bash
+      - name: Wait for CodeBuild completion
+        run: ./.github/scripts/poll_build_status.sh ${{ env.BATCH_ID }}
+        shell: bash
