chore: Use commit ID instead of PR number

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Start CodeBuild Batch Build
         run: |
           echo 'BATCH_ID<<EOF' >> $GITHUB_ENV
-          ./.github/scripts/start_codebuild_batch.sh pr/${{ github.event.number }} >> $GITHUB_ENV
+          ./.github/scripts/start_codebuild_batch.sh ${{ env.GITHUB_SHA }} >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
         shell: bash
       - name: Wait for CodeBuild completion
