chore: Update SHA access

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Start CodeBuild Batch Build
         run: |
           echo "BATCH_ID<<EOF" >> $GITHUB_ENV
-          ./.github/scripts/start_codebuild_batch.sh ${{ GITHUB_SHA }} >> $GITHUB_ENV
+          ./.github/scripts/start_codebuild_batch.sh ${{ github.sha }} >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
         shell: bash
       - name: Wait for CodeBuild completion
