chore: fix release-ci (#1883)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,9 @@ jobs:
           buildspec-override: codebuild/ci/release-ci.yml
           compute-type-override: BUILD_GENERAL1_LARGE
           image-override: aws/codebuild/standard:3.0
+          env-vars-for-codebuild: GITHUB_EVENT_NAME
+        env:
+          GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
   validateCI:
     name: Validate CI
     runs-on: ubuntu-latest
@@ -106,7 +109,9 @@ jobs:
           image-override: ${{ matrix.platform.image }}
           env-vars-for-codebuild: |
             JAVA_ENV_VERSION,
-            JAVA_NUMERIC_VERSION
+            JAVA_NUMERIC_VERSION,
+            GITHUB_EVENT_NAME
         env:
           JAVA_ENV_VERSION: ${{ matrix.platform.distribution }}${{ matrix.version }}
           JAVA_NUMERIC_VERSION: ${{ matrix.version }}
+          GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
