--- a/codebuild/ci/validate-ci.yml
+++ b/codebuild/ci/validate-ci.yml
@@ -16,7 +16,7 @@ phases:
       java: $JAVA_ENV_VERSION
   pre_build:
     commands:
-      - VERSION_HASH="$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-$CODEBUILD_RESOLVED_SOURCE_VERSION"
+      - VERSION_HASH="$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)-$CODEBUILD_RESOLVED_SOURCE_VERSION-$GITHUB_EVENT_NAME"
       - export SETTINGS_FILE=$(pwd)/codebuild/ci/settings.xml
       - git clone https://github.com/aws-samples/busy-engineers-document-bucket.git
       - cd busy-engineers-document-bucket/exercises/java/encryption-context-complete
