--- a/codebuild/release/release-prod.yml
+++ b/codebuild/release/release-prod.yml
@@ -5,7 +5,7 @@ version: 0.2
 
 env:
   variables:
-    BRANCH: "v3.0.0"
+    BRANCH: "master"
   secrets-manager:
     GPG_KEY: Maven-GPG-Keys-Release-Credentials:Keyname
     GPG_PASS: Maven-GPG-Keys-Release-Credentials:Passphrase
