--- a/codebuild/release/upload_artifacts.yml
+++ b/codebuild/release/upload_artifacts.yml
@@ -5,7 +5,7 @@ version: 0.2
 
 env:
   variables:
-    BRANCH: "v3.0.0"
+    BRANCH: "master"
   git-credential-helper: yes
   secrets-manager:
     GH_TOKEN: Github/aws-crypto-tools-ci-bot:ESDK Release Token
