fetch vectors from ESDK NET

--- a/codebuild/ci/net-vectors-ci.yml
+++ b/codebuild/ci/net-vectors-ci.yml
@@ -37,6 +37,4 @@ phases:
     commands:
       # Fetch awses-decrypt/python-2.3.0.zip
       - VECTOR_DIR=$CODEBUILD_SRC_DIR/src/test/resources
-      - mvn -B -ntp install -Dgpg.skip=true -Djacoco.skip=true \
-        "-Dtest=TestVectorRunner" \
-        "-DtestVectorZip=file://$VECTOR_ZIP"
+      - mvn -B -ntp install -Dgpg.skip=true -Djacoco.skip=true "-Dtest=TestVectorRunner" "-DtestVectorZip=file://$VECTOR_ZIP"
