--- a/codebuild/ci/vectors-ci-mkp.yml
+++ b/codebuild/ci/vectors-ci-mkp.yml
@@ -31,7 +31,4 @@ phases:
   build:
     commands:
       # Enable masterKey to run Test Vectors against MasterKeyProvider
-      - mvn -B -ntp install -Dgpg.skip=true -Djacoco.skip=true \
-        "-Dtest=TestVectorRunner" \
-        "-Dmasterkey=true" \
-        "-DtestVectorZip=file://$CODEBUILD_SRC_DIR/src/test/resources/aws-encryption-sdk-test-vectors/vectors/awses-decrypt/python-2.3.0.zip"
+      - mvn -B -ntp install -Dgpg.skip=true -Djacoco.skip=true "-Dtest=TestVectorRunner" "-Dmasterkey=true" "-DtestVectorZip=file://$CODEBUILD_SRC_DIR/src/test/resources/aws-encryption-sdk-test-vectors/vectors/awses-decrypt/python-2.3.0.zip"
