--- a/codebuild/ci/net-vectors-ci.yml
+++ b/codebuild/ci/net-vectors-ci.yml
@@ -32,7 +32,7 @@ phases:
       # Fetch ESDK .NET v4.0.1 Test Vectors
       - VECTOR_ZIP=$CODEBUILD_SRC_DIR/v4-Net-4.0.1.zip
       - VECTORS_URL=https://github.com/awslabs/aws-encryption-sdk-test-vectors/raw/master/vectors/awses-decrypt/python-2.3.0.zip
-      - curl --no-progress-meter --output $VECTOR_ZIP --location $VECTORS_URL
+      - curl -s --output $VECTOR_ZIP --location $VECTORS_URL
   build:
     commands:
       # Fetch awses-decrypt/python-2.3.0.zip
