--- a/codebuild/ci/vectors-ci.yml
+++ b/codebuild/ci/vectors-ci.yml
@@ -30,4 +30,5 @@ phases:
       - cd $CODEBUILD_SRC_DIR
   build:
     commands:
+      # NOTE: We need to pass the absolute path of the vectors
       - mvn install -T 8 -Dgpg.skip=true -ntp "-DtestVectorZip=file://$CODEBUILD_SRC_DIR/src/test/resources/aws-encryption-sdk-test-vectors/vectors/awses-decrypt/python-2.3.0.zip"
