--- a/codebuild/ci/net-vectors-ci.yml
+++ b/codebuild/ci/net-vectors-ci.yml
@@ -1,5 +1,5 @@
 version: 0.2
-
+# Runs Only the ESDK-NET v4.0.1 Decryption Vectors, testing Required EC CMM
 phases:
   install:
     runtime-versions:
